==> MikroElektronika/mikrosdk_v2/targets/arm/mikroe/renesas/src/uart/implementation_1/hal_ll_uart.c <==
#include "hal_ll_uart.h"
#include "hal_ll_gpio.h"
#include "hal_ll_core.h"
#include "hal_ll_mstpcr.h"
#include "hal_ll_core_defines.h"
#include "hal_ll_uart_pin_map.h"
#define hal_ll_uart_get_module_state_address ((hal_ll_uart_handle_register_t *)*handle)
#define hal_ll_uart_get_handle (hal_ll_uart_handle_register_t *)hal_ll_uart_get_module_state_address->hal_ll_uart_handle
#define hal_ll_uart_get_base_struct(_handle) ((hal_ll_uart_base_handle_t *)_handle)
#define hal_ll_uart_get_base_from_hal_handle ((hal_ll_uart_hw_specifics_map_t *)((hal_ll_uart_handle_register_t *)\
                                             (((hal_ll_uart_handle_register_t *)(handle))->hal_ll_uart_handle))->hal_ll_uart_handle)->base
#define hal_ll_uart_get_status_flags(_handle,_flag) (((hal_ll_uart_base_handle_t *)_handle)->mis & _flag)
#define hal_ll_uart_clear_status_flag(_handle,_flag) (set_reg_bit(&(((hal_ll_uart_base_handle_t *)_handle)->icr), _flag))
#define hal_ll_sci_brr_assert_divisors(is_base_16, i)   \
                                    (is_base_16  ^ (g_async_baud[i].abcs | g_async_baud[i].abcse))
#define hal_ll_sci_brr_calculate(baud, pclka, i) (pclka / (g_div_coefficient[i] * baud))
#define hal_ll_sci_brr_get_error(brr, pclka, baud, i) \
    (int32_t)(((((int64_t)pclka) * HAL_LL_SCI_BRR_ERROR_REFERENCE) / \
    (g_div_coefficient[i] * baud * (brr + 1))) - HAL_LL_SCI_BRR_ERROR_REFERENCE)
#define hal_ll_sci_get_baud_rate(pclka, brr, i) (pclka / ((brr + 1) * g_div_coefficient[i]))

void hal_ll_uart_close( handle_t *handle ) {
    low_level_handle = hal_ll_uart_get_handle;
    hal_ll_uart_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_uart_get_module_state_address );

    if( low_level_handle->hal_ll_uart_handle != NULL ) {
        hal_ll_uart_set_clock( hal_ll_uart_hw_specifics_map_local, true );
        hal_ll_uart_alternate_functions_set_state( hal_ll_uart_hw_specifics_map_local, false );

        hal_ll_uart_irq_disable( handle, HAL_LL_UART_IRQ_RX );
        hal_ll_uart_irq_disable( handle, HAL_LL_UART_IRQ_TX );

        hal_ll_uart_clear_regs( hal_ll_uart_hw_specifics_map_local->base );
        hal_ll_uart_set_clock( hal_ll_uart_hw_specifics_map_local, false );

        hal_ll_uart_hw_specifics_map_local->pins.tx_pin.pin_name = HAL_LL_PIN_NC;
        hal_ll_uart_hw_specifics_map_local->pins.tx_pin.pin_af = 0;
        hal_ll_uart_hw_specifics_map_local->pins.rx_pin.pin_name = HAL_LL_PIN_NC;
        hal_ll_uart_hw_specifics_map_local->pins.rx_pin.pin_af = 0;

        hal_ll_uart_hw_specifics_map_local->baud_rate.baud = 115200UL;
        hal_ll_uart_hw_specifics_map_local->baud_rate.real_baud = 0;

        irq_handler = NULL;
        objects[ hal_ll_uart_find_index( handle ) ] = NULL;

        low_level_handle->hal_ll_uart_handle = NULL;
        low_level_handle->hal_drv_uart_handle = NULL;

        low_level_handle->init_ll_state = false;
    }
}

void hal_ll_uart_irq_enable( handle_t *handle, hal_ll_uart_irq_t irq ) {
    low_level_handle = hal_ll_uart_get_handle;
    hal_ll_uart_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_uart_get_module_state_address );

    hal_ll_uart_base_handle_t *hal_ll_hw_reg = ( hal_ll_uart_base_handle_t *)hal_ll_uart_hw_specifics_map_local->base;

    switch ( irq ) {
        case HAL_LL_UART_IRQ_RX:
            // TODO
            break;
        case HAL_LL_UART_IRQ_TX:
            // TODO
            break;

        default:
            break;
    }

    switch ( hal_ll_uart_hw_specifics_map_local->module_index ) {
        #if defined( UART_MODULE_0 ) && defined( UART0_NVIC )
        case hal_ll_uart_module_num( UART_MODULE_0 ):
            hal_ll_core_enable_irq( UART0_NVIC );
            break;
        #endif
        #if defined( UART_MODULE_1 ) && defined( UART1_NVIC )
        case hal_ll_uart_module_num( UART_MODULE_1 ):
            hal_ll_core_enable_irq( UART1_NVIC );
            break;
        #endif
        #if defined( UART_MODULE_2 ) && defined( UART2_NVIC )
        case hal_ll_uart_module_num( UART_MODULE_2 ):
            hal_ll_core_enable_irq( UART2_NVIC );
            break;
        #endif
        #if defined( UART_MODULE_3 ) && defined( UART3_NVIC )
        case hal_ll_uart_module_num( UART_MODULE_3 ):
            hal_ll_core_enable_irq( UART3_NVIC );
            break;
        #endif
        #if defined( UART_MODULE_4 ) && defined( UART4_NVIC )
        case hal_ll_uart_module_num( UART_MODULE_4 ):
            hal_ll_core_enable_irq( UART4_NVIC );
            break;
        #endif
        #if defined( UART_MODULE_5 ) && defined( UART5_NVIC )
        case hal_ll_uart_module_num( UART_MODULE_5 ):
            hal_ll_core_enable_irq( UART5_NVIC );
            break;
        #endif
        #if defined( UART_MODULE_6 ) && defined( UART6_NVIC )
        case hal_ll_uart_module_num( UART_MODULE_6 ):
            hal_ll_core_enable_irq( UART6_NVIC );
            break;
        #endif
        #if defined(UART_MODULE_7) && defined(UART7_NVIC)
        case hal_ll_uart_module_num( UART_MODULE_7 ):
            hal_ll_core_enable_irq( UART7_NVIC );
            break;
        #endif

        default:
            break;
    }
}

void hal_ll_uart_irq_disable( handle_t *handle, hal_ll_uart_irq_t irq ) {
    low_level_handle = hal_ll_uart_get_handle;
    hal_ll_uart_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_uart_get_module_state_address );

    hal_ll_uart_base_handle_t *hal_ll_hw_reg = ( hal_ll_uart_base_handle_t *)hal_ll_uart_hw_specifics_map_local->base;

    switch ( irq ) {
        case HAL_LL_UART_IRQ_RX:
            // TODO
            break;
        case HAL_LL_UART_IRQ_TX:
            // TODO
            break;

        default:
            break;
    }

    /* Check if module interrupt flags are set or not.
     * ATTENTION This is a very important part in the code.
     * Interrupts should be disabled ONLY in case we have
     * both TX and RX interrupts disabled.
     */
    if (
        //  ( !check_reg_bit( &hal_ll_hw_reg->im, HAL_LL_UART_IT_RXIM_BIT ) ) &&
        //  ( !check_reg_bit( &hal_ll_hw_reg->im, HAL_LL_UART_IT_TXIM_BIT ) )
        1 // TODO
        )
    {
        switch ( hal_ll_uart_hw_specifics_map_local->module_index ) {
            #if defined( UART_MODULE_0 ) && defined( UART0_NVIC )
            case hal_ll_uart_module_num( UART_MODULE_0 ):
                hal_ll_core_disable_irq( UART0_NVIC );
                break;
            #endif
            #if defined( UART_MODULE_1 ) && defined( UART1_NVIC )
            case hal_ll_uart_module_num( UART_MODULE_1 ):
                hal_ll_core_disable_irq( UART1_NVIC );
                break;
            #endif
            #if defined( UART_MODULE_2 ) && defined( UART2_NVIC )
            case hal_ll_uart_module_num( UART_MODULE_2 ):
                hal_ll_core_disable_irq( UART2_NVIC );
                break;
            #endif
            #if defined( UART_MODULE_3 ) && defined( UART3_NVIC )
            case hal_ll_uart_module_num( UART_MODULE_3 ):
                hal_ll_core_disable_irq( UART3_NVIC );
                break;
            #endif
            #if defined( UART_MODULE_4 ) && defined( UART4_NVIC )
            case hal_ll_uart_module_num( UART_MODULE_4 ):
                hal_ll_core_disable_irq( UART4_NVIC );
                break;
            #endif
            #if defined( UART_MODULE_5 ) && defined( UART5_NVIC )
            case hal_ll_uart_module_num( UART_MODULE_5 ):
                hal_ll_core_disable_irq( UART5_NVIC );
                break;
            #endif
            #if defined( UART_MODULE_6 ) && defined( UART6_NVIC )
            case hal_ll_uart_module_num( UART_MODULE_6 ):
                hal_ll_core_disable_irq( UART6_NVIC );
                break;
            #endif
            #if defined( UART_MODULE_7 ) && defined( UART7_NVIC )
            case hal_ll_uart_module_num( UART_MODULE_7 ):
                hal_ll_core_disable_irq( UART7_NVIC );
                break;
            #endif

            default:
                break;
        }
    }
}

static void hal_ll_uart_alternate_functions_set_state( hal_ll_uart_hw_specifics_map_t *map, bool hal_ll_state ) {
    module_struct module;
    uint32_t uart_config = 0;

    if (( map->pins.rx_pin.pin_name != HAL_LL_PIN_NC ) &&
        ( map->pins.tx_pin.pin_name != HAL_LL_PIN_NC ))
    {
        module.pins[0] = VALUE( map->pins.tx_pin.pin_name, map->pins.tx_pin.pin_af );
        module.pins[1] = VALUE( map->pins.rx_pin.pin_name, map->pins.rx_pin.pin_af );
        module.pins[2] = GPIO_MODULE_STRUCT_END;

        module.configs[ 0 ] = uart_config;
        module.configs[ 1 ] = uart_config;
        module.configs[ 2 ] = GPIO_MODULE_STRUCT_END;

        hal_ll_gpio_module_struct_init( &module, hal_ll_state );
    }
}

static void hal_ll_uart_set_baud_bare_metal( hal_ll_uart_hw_specifics_map_t *map ) {
    hal_ll_uart_base_handle_t *hal_ll_hw_reg = hal_ll_uart_get_base_struct( map->base );

    /* Find the best BRR (bit rate register) value.
     *  In table g_async_baud, divisor values are stored for BGDM, ABCS, ABCSE and N values. Each set of divisors
     *  is tried, and the settings with the lowest bit rate error are stored. The formula to calculate BRR is as
     *  follows and it must be 255 or less:
     *  BRR = (PCLKA / (div_coefficient * baud)) - 1
     */
    uint32_t error = HAL_LL_SCI_BRR_ERROR_REFERENCE;
    uint32_t temp_brr, divisor = 0U;
    uint8_t abcse, abcs, bgdm, brr, cks;
    int32_t err_divisor, current_error;
    uint32_t source_clock = hal_ll_uart_get_clock_speed( );

    for ( uint8_t select_16_base_clk_cycles = 0U;
          (( 1 >= select_16_base_clk_cycles ) && ( HAL_LL_SCI_BRR_ERROR_ACCEPTABLE < error ));
          select_16_base_clk_cycles++ )
    {
        for ( uint8_t i = 0U; HAL_LL_SCI_NUM_DIVISORS > i ; i++ )
        {
            if ( hal_ll_sci_brr_assert_divisors( select_16_base_clk_cycles, i ))
            {
                continue;
            }

            temp_brr = hal_ll_sci_brr_calculate( map->baud_rate.baud, source_clock, i );

            if (( HAL_LL_SCI_BRR_MAX ) >= temp_brr )
            {
                while ( temp_brr-- > 0U )
                {
                    current_error = hal_ll_sci_brr_get_error( temp_brr, source_clock, map->baud_rate.baud, i );

                    /* Take the absolute value of the bit rate error. */
                    if ( current_error < 0 )
                    {
                        current_error = -current_error;
                    }

                    /* If the absolute value of the bit rate error is less than the previous lowest absolute value of
                     *  bit rate error, then store these settings as the best value.
                     */
                    if ( current_error < error )
                    {
                        bgdm  = g_async_baud[i].bgdm;
                        abcs  = g_async_baud[i].abcs;
                        abcse = g_async_baud[i].abcse;
                        cks = g_async_baud[i].cks;
                        brr = ( uint8_t ) temp_brr;
                        error = current_error;
                        map->baud_rate.real_baud = hal_ll_sci_get_baud_rate( source_clock, brr ,i );
                    }
                }
            }
        }
    }

    set_reg_bits( &hal_ll_hw_reg->semr, HAL_LL_SCI_SEMR_CONFIGURE( bgdm, abcs, abcse ));
    set_reg_bits( &hal_ll_hw_reg->smr, cks );
    write_reg( &hal_ll_hw_reg->brr, brr );
}

static void hal_ll_uart_set_data_bits_bare_metal( hal_ll_uart_hw_specifics_map_t *map ) {
    hal_ll_uart_base_handle_t *hal_ll_hw_reg = hal_ll_uart_get_base_struct( map->base );

    switch ( map->data_bit )
    {
        case HAL_LL_UART_DATA_BITS_7:
            set_reg_bit( &hal_ll_hw_reg->scmr, HAL_LL_SCI_SCMR_CHR1 );
            set_reg_bit( &hal_ll_hw_reg->smr, HAL_LL_SCI_SMR_CHR );
            break;
        case HAL_LL_UART_DATA_BITS_8:
            set_reg_bit( &hal_ll_hw_reg->scmr, HAL_LL_SCI_SCMR_CHR1 );
            clear_reg_bit( &hal_ll_hw_reg->smr, HAL_LL_SCI_SMR_CHR );
            break;
        case HAL_LL_UART_DATA_BITS_9:
            clear_reg_bit( &hal_ll_hw_reg->scmr, HAL_LL_SCI_SCMR_CHR1 );
            break;

        default:
            break;
    }
}

static void hal_ll_uart_set_parity_bare_metal( hal_ll_uart_hw_specifics_map_t *map ) {
    hal_ll_uart_base_handle_t *hal_ll_hw_reg = hal_ll_uart_get_base_struct( map->base );

    switch ( map->parity )
    {
        case HAL_LL_UART_PARITY_NONE:
            clear_reg_bit( &hal_ll_hw_reg->smr, HAL_LL_SCI_SMR_PE );
            break;
        case HAL_LL_UART_PARITY_EVEN:
            set_reg_bit( &hal_ll_hw_reg->smr, HAL_LL_SCI_SMR_PE );
            break;
        case HAL_LL_UART_PARITY_ODD:
            set_reg_bit( &hal_ll_hw_reg->smr, HAL_LL_SCI_SMR_PE );
            set_reg_bit( &hal_ll_hw_reg->smr, HAL_LL_SCI_SMR_PM );
            break;

        default:
            break;
    }
}
