==> MikroElektronika/mikrosdk_v2/targets/avr_8bit/mikroe/avr/src/uart/implementation_1/hal_ll_uart.c <==
#include "hal_ll_gpio.h"
#include "hal_ll_core.h"
#include "hal_ll_uart.h"
#include "hal_ll_uart_pin_map.h"
#define hal_ll_uart_get_module_state_address ((hal_ll_uart_handle_register_t *)*handle)
#define hal_ll_uart_get_handle (hal_ll_uart_handle_register_t *)hal_ll_uart_get_module_state_address->hal_ll_uart_handle
#define hal_ll_uart_get_base_struct(_handle) ((const hal_ll_uart_base_handle_t *)_handle)
#define hal_ll_uart_get_base_from_hal_handle ((hal_ll_uart_hw_specifics_map_t *)((hal_ll_uart_handle_register_t *)\
                                             (((hal_ll_uart_handle_register_t *)(handle))->hal_ll_uart_handle))->hal_ll_uart_handle)->base
#define hal_ll_uart_get_base_handle ((hal_ll_uart_hw_specifics_map_t *)((hal_ll_uart_get_handle)->hal_ll_uart_handle))->base
#define _fosc (Get_Fosc_kHz()*1000)
#define hal_ll_uart_wait_for_sync(_hal_sync_val) while( _hal_sync_val-- ){asm nop;}
#define HAL_LL_PRR_PRUSART0_BIT (1)
#define HAL_LL_PRR_PRUSART3_BIT (2)
#define HAL_LL_UART_CREN_BIT (4)
#define HAL_LL_UART_TXEN_BIT (3)
#define HAL_LL_UART_DATA_BITS_9_USCRB_REGISTER_BIT (2)
#define HAL_LL_UART_DATA_BITS_MASK_USCRC_REGISTER (1)
#define HAL_LL_UART_DATA_BITS_5_MASK (3)
#define HAL_LL_UART_DATA_BITS_7_MASK (2)
#define HAL_LL_UART_DATA_BITS_8_MASK (3)
#define HAL_LL_UART_PARITY_MASK (4)
#define HAL_LL_UART_PARITY_NONE_MASK (0)
#define HAL_LL_UART_PARITY_EVEN_MASK (2)
#define HAL_LL_UART_PARITY_ODD_MASK (3)
#define HAL_LL_UART_STOP_BIT (3)

void hal_ll_uart_close( handle_t *handle ) {
    low_level_handle = hal_ll_uart_get_handle;
    hal_ll_uart_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_uart_get_module_state_address );

    if( NULL != low_level_handle->hal_ll_uart_handle ) {
        #if HAL_LL_POWER_REDUCTION
        hal_ll_uart_set_module_power( hal_ll_uart_hw_specifics_map_local, true );
        #endif

        hal_ll_uart_alternate_functions_set_state( hal_ll_uart_hw_specifics_map_local, false );

        hal_ll_uart_irq_disable( handle, HAL_LL_UART_IRQ_RX );
        hal_ll_uart_irq_disable( handle, HAL_LL_UART_IRQ_TX );

        hal_ll_uart_clear_regs( hal_ll_uart_hw_specifics_map_local->base );

        // Power-down appropriate UART module via Power Reduction Register (if available).
        #if HAL_LL_POWER_REDUCTION
        hal_ll_uart_set_module_power( hal_ll_uart_hw_specifics_map_local, false );
        #endif

        hal_ll_uart_hw_specifics_map_local->pins.tx_pin.pin_name = HAL_LL_PIN_NC;
        hal_ll_uart_hw_specifics_map_local->pins.rx_pin.pin_name = HAL_LL_PIN_NC;

        hal_ll_uart_hw_specifics_map_local->baud_rate.baud = 115200UL;
        hal_ll_uart_hw_specifics_map_local->baud_rate.real_baud = 0;

        irq_handler = NULL;
        objects[ hal_ll_uart_find_index( handle ) ] = NULL;

        low_level_handle->hal_ll_uart_handle = NULL;
        low_level_handle->hal_drv_uart_handle = NULL;

        low_level_handle->init_ll_state = false;
    }
}

void hal_ll_uart_irq_enable( handle_t *handle, hal_ll_uart_irq_t irq ) {
    hal_ll_uart_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_uart_get_module_state_address);

    switch ( irq ) {
        case HAL_LL_UART_IRQ_RX:
            __HAL_LL_UART_ENABLE_IT( hal_ll_uart_hw_specifics_map_local->module_index,
                                     hal_ll_uart_hw_specifics_map_local->pins.rx_pin.pir_num );
            break;

        case HAL_LL_UART_IRQ_TX:
            __HAL_LL_UART_ENABLE_IT( hal_ll_uart_hw_specifics_map_local->module_index,
                                     hal_ll_uart_hw_specifics_map_local->pins.tx_pin.pir_num );
            break;

        default:
            break;
    }
}

void hal_ll_uart_irq_disable( handle_t *handle, hal_ll_uart_irq_t irq ) {
    hal_ll_uart_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_uart_get_module_state_address);

    switch ( irq ) {
        case HAL_LL_UART_IRQ_RX:
            __HAL_LL_UART_DISABLE_IT( hal_ll_uart_hw_specifics_map_local->module_index,
                                      hal_ll_uart_hw_specifics_map_local->pins.rx_pin.pir_num );
            break;

        case HAL_LL_UART_IRQ_TX:
            __HAL_LL_UART_DISABLE_IT( hal_ll_uart_hw_specifics_map_local->module_index,
                                      hal_ll_uart_hw_specifics_map_local->pins.tx_pin.pir_num );
            break;

        default:
            break;
    }

    if ( ( check_reg_bit( hal_ll_uart_regs[ hal_ll_uart_hw_specifics_map_local->module_index ].uart_ucsra_reg_addr, HAL_LL_UART_TXIF_BIT ) ) &&
         ( check_reg_bit( hal_ll_uart_regs[ hal_ll_uart_hw_specifics_map_local->module_index ].uart_ucsra_reg_addr, HAL_LL_UART_RXIF_BIT ) ) ) {
        switch ( hal_ll_uart_hw_specifics_map_local->module_index ) {
            #ifdef UART_MODULE_0
            case hal_ll_uart_module_num(UART_MODULE_0):
                hal_ll_core_disable_irq( HAL_LL_USART0_RX_IVT_ADDRESS );
                break;
            #endif
            #ifdef UART_MODULE_1
            case hal_ll_uart_module_num(UART_MODULE_1):
                hal_ll_core_disable_irq( HAL_LL_USART1_RX_IVT_ADDRESS );
                break;
            #endif
            #ifdef UART_MODULE_2
            case hal_ll_uart_module_num(UART_MODULE_2):
                hal_ll_core_disable_irq( HAL_LL_USART2_RX_IVT_ADDRESS );
                break;
            #endif
            #ifdef UART_MODULE_3
            case hal_ll_uart_module_num(UART_MODULE_3):
                hal_ll_core_disable_irq( HAL_LL_USART3_RX_IVT_ADDRESS );
                break;
            #endif

            default:
                break;
        }
    }
}

static void hal_ll_uart_alternate_functions_set_state( hal_ll_uart_hw_specifics_map_t *map, bool hal_ll_state ) {
    hal_ll_gpio_pin_t local_pin;
    if ( ( HAL_LL_PIN_NC != map->pins.tx_pin.pin_name ) && ( HAL_LL_PIN_NC != map->pins.rx_pin.pin_name ) ) {
        if (hal_ll_state) {
            hal_ll_gpio_configure_pin( &local_pin, map->pins.tx_pin.pin_name, HAL_LL_GPIO_DIGITAL_OUTPUT );
            hal_ll_gpio_configure_pin( &local_pin, map->pins.rx_pin.pin_name, HAL_LL_GPIO_DIGITAL_INPUT );
        } else {
            hal_ll_gpio_configure_pin( &local_pin, map->pins.tx_pin.pin_name, HAL_LL_GPIO_DIGITAL_INPUT );
            hal_ll_gpio_configure_pin( &local_pin, map->pins.rx_pin.pin_name, HAL_LL_GPIO_DIGITAL_INPUT );
        }
    }
}

static void hal_ll_uart_set_baud_bare_metal(hal_ll_uart_hw_specifics_map_t *map) {
    const hal_ll_uart_base_handle_t *hal_ll_hw_reg = hal_ll_uart_get_base_struct(map->base);

    float baud_rate_prescaler_remainder = 0.0;
    uint16_t baud_rate_prescaler_int = 0;
    float baud_rate_prescaler_raw = 0.0;
    float baud_rate_calculated = 0.0;
    float abs_res = 0.0;
    float err = 0.0;

    float divider = HAL_LL_UART_ASYNCHRONOUS_MODE_CLOCK_DIVIDER;

    // Calculate baud rate prescaler value.
    baud_rate_prescaler_raw = ( _fosc / ( divider * map->baud_rate.baud ) ) - 1.0;

    // Get the integer part of the baud rate prescaler.
    baud_rate_prescaler_int = baud_rate_prescaler_raw;

    // Get the remainder part of the baud rate prescaler.
    baud_rate_prescaler_remainder = baud_rate_prescaler_raw - (float)baud_rate_prescaler_int;

    // Apply "floor" or "ceiling" logic.
    if ( HAL_LL_UART_FLOOR_OR_CEILING_MASK < baud_rate_prescaler_remainder ) {
        ++baud_rate_prescaler_int;
    }

    baud_rate_calculated = ( _fosc / ( divider * ( baud_rate_prescaler_int + 1 )));

    abs_res = (( baud_rate_calculated / map->baud_rate.baud ) - 1.0 );
    abs_res = ( abs_res < 0 ) ? abs_res * (-1.0) : abs_res;
    err = (float)( abs_res * 100 );

    if( err > (float)2.5 ) {
        divider = HAL_LL_UART_ASYNCHRONOUS_MODE_CLOCK_DIVIDER_U2Xn;

        // Set U2Xn bit to double transfer rate.
        set_reg_bit( hal_ll_hw_reg->uart_ucsra_reg_addr, HAL_LL_UART_DOUBLE_SPEED );

        // Calculate baud rate prescaler value.
        baud_rate_prescaler_raw = ( _fosc / ( divider * map->baud_rate.baud ) ) - 1.0;

        // Get the integer part of the baud rate prescaler.
        baud_rate_prescaler_int = baud_rate_prescaler_raw;

        // Get the remainder part of the baud rate prescaler.
        baud_rate_prescaler_remainder = baud_rate_prescaler_raw - (float)baud_rate_prescaler_int;

        // Apply "floor" or "ceiling" logic.
        if ( HAL_LL_UART_FLOOR_OR_CEILING_MASK < baud_rate_prescaler_remainder ) {
            ++baud_rate_prescaler_int;
        }
    }

    // Memorize actual baud rate.
    map->baud_rate.real_baud = ( _fosc / ( divider * ( baud_rate_prescaler_int + 1 ) ) );
    if( hal_ll_uart_get_baud_error( map->baud_rate.real_baud, map->baud_rate.baud ) ) {
        // Change to error baud if error greater than 1%.
        map->baud_rate.real_baud = hal_ll_uart_get_baud_error( map->baud_rate.real_baud, map->baud_rate.baud );
    } else {
        // If prescaler value is greater than 255, populate HIGH register in first place.
        if ( HAL_LL_UART_BAUD_RATE_REG_LOW_LENGTH < baud_rate_prescaler_int ) {
            #ifdef REGISTERS_WITH_SHARED_IO_LOCATION
            write_reg( hal_ll_hw_reg->uart_ubrrh_reg_addr, ( ( ( baud_rate_prescaler_int & HAL_LL_UART_THIRD_NIBBLE_MASK ) >> 8 ) &
            HAL_LL_UART_BAUD_RATE_REGISTER_SELECTED ) );
            #else
            write_reg( hal_ll_hw_reg->uart_ubrrh_reg_addr, ( ( baud_rate_prescaler_int & HAL_LL_UART_THIRD_NIBBLE_MASK ) >> 8 ) );
            #endif
        }

        // Populate LOW register with lower eight bits of baud rate value.
        write_reg( hal_ll_hw_reg->uart_ubrrl_reg_addr, (uint8_t)baud_rate_prescaler_int );
    }
}

static void hal_ll_uart_set_data_bits_bare_metal( hal_ll_uart_hw_specifics_map_t *map ) {
    const hal_ll_uart_base_handle_t *hal_ll_hw_reg = hal_ll_uart_get_base_struct(map->base);

    switch ( map->data_bit ) {
        case HAL_LL_UART_DATA_BITS_7:
            #ifdef REGISTERS_WITH_SHARED_IO_LOCATION
            write_reg( hal_ll_hw_reg->uart_ucsrc_reg_addr, HAL_LL_UART_CONTROL_AND_STATUS_REGISTER_SELECTED |
            ( HAL_LL_UART_DATA_BITS_7_MASK << HAL_LL_UART_DATA_BITS_MASK_USCRC_REGISTER ) );
            #else
            set_reg_bit( hal_ll_hw_reg->uart_ucsrc_reg_addr, HAL_LL_UART_DATA_BITS_7_MASK << HAL_LL_UART_DATA_BITS_MASK_USCRC_REGISTER );
            clear_reg_bit( hal_ll_hw_reg->uart_ucsrb_reg_addr, HAL_LL_UART_DATA_BITS_9_USCRB_REGISTER_BIT );
            #endif
            break;
        case HAL_LL_UART_DATA_BITS_8:
            #ifdef REGISTERS_WITH_SHARED_IO_LOCATION
            write_reg( hal_ll_hw_reg->uart_ucsrc_reg_addr, HAL_LL_UART_CONTROL_AND_STATUS_REGISTER_SELECTED |
            ( HAL_LL_UART_DATA_BITS_8_MASK << HAL_LL_UART_DATA_BITS_MASK_USCRC_REGISTER ) );
            #else
            set_reg_bits( hal_ll_hw_reg->uart_ucsrc_reg_addr, HAL_LL_UART_DATA_BITS_8_MASK << HAL_LL_UART_DATA_BITS_MASK_USCRC_REGISTER );
            clear_reg_bit( hal_ll_hw_reg->uart_ucsrb_reg_addr, HAL_LL_UART_DATA_BITS_9_USCRB_REGISTER_BIT );
            #endif
            break;
        case HAL_LL_UART_DATA_BITS_9:
            #ifdef REGISTERS_WITH_SHARED_IO_LOCATION
            write_reg( hal_ll_hw_reg->uart_ucsrc_reg_addr, HAL_LL_UART_CONTROL_AND_STATUS_REGISTER_SELECTED |
            ( HAL_LL_UART_DATA_BITS_8_MASK << HAL_LL_UART_DATA_BITS_MASK_USCRC_REGISTER ) );
            #else
            set_reg_bits( hal_ll_hw_reg->uart_ucsrc_reg_addr, HAL_LL_UART_DATA_BITS_8_MASK << HAL_LL_UART_DATA_BITS_MASK_USCRC_REGISTER );
            #endif
            set_reg_bit( hal_ll_hw_reg->uart_ucsrb_reg_addr, HAL_LL_UART_DATA_BITS_9_USCRB_REGISTER_BIT );
            break;

        default:
            break;
    }
}

static void hal_ll_uart_set_parity_bare_metal( hal_ll_uart_hw_specifics_map_t *map ) {
const hal_ll_uart_base_handle_t *hal_ll_hw_reg = hal_ll_uart_get_base_struct( map->base );

    switch( map->parity ) {
        case HAL_LL_UART_PARITY_NONE:
            #ifdef REGISTERS_WITH_SHARED_IO_LOCATION
            *(uint8_t *)hal_ll_hw_reg->uart_ucsrc_reg_addr &= HAL_LL_UART_CONTROL_AND_STATUS_REGISTER_SELECTED |
            HAL_LL_UART_FIRST_NIBBLE_MASK;
            #else
            clear_reg_bits( hal_ll_hw_reg->uart_ucsrc_reg_addr, HAL_LL_UART_PARITY_NONE_MASK << HAL_LL_UART_PARITY_MASK );
            #endif
            break;
        case HAL_LL_UART_PARITY_EVEN:
            #ifdef REGISTERS_WITH_SHARED_IO_LOCATION
            set_reg_bits( hal_ll_hw_reg->uart_ucsrc_reg_addr, HAL_LL_UART_CONTROL_AND_STATUS_REGISTER_SELECTED |
            ( HAL_LL_UART_PARITY_ODD_MASK << HAL_LL_UART_PARITY_MASK ) );
            #else
            set_reg_bits( hal_ll_hw_reg->uart_ucsrc_reg_addr, HAL_LL_UART_PARITY_EVEN_MASK << HAL_LL_UART_PARITY_MASK );
            #endif
            break;
        case HAL_LL_UART_PARITY_ODD:
            #ifdef REGISTERS_WITH_SHARED_IO_LOCATION
            set_reg_bits( hal_ll_hw_reg->uart_ucsrc_reg_addr, HAL_LL_UART_CONTROL_AND_STATUS_REGISTER_SELECTED |
            ( HAL_LL_UART_PARITY_ODD_MASK << HAL_LL_UART_PARITY_MASK ) );
            #else
            set_reg_bits( hal_ll_hw_reg->uart_ucsrc_reg_addr, HAL_LL_UART_PARITY_ODD_MASK << HAL_LL_UART_PARITY_MASK );
            #endif
            break;

        default:
            break;
    }
}
